# game-streetcat2026

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
src/: display.rs  gfx.rs  input.rs  main.rs  savegame.rs  text.rs
src/game/: campaign.rs  fishing.rs  mod.rs  plot.rs  shop.rs  skillcheck.rs  start.rs  story.rs
video/: cat.raw  crown.raw  fish.raw  fishbones.raw  fishingrod.raw  key.raw  necktie.raw
